for conflict error

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="ko">
   <head>
     <title>index.html</title>
-    wonder1ng 수정.
   </head>
   <body>
     <p>조원이 수정함</p>
+    <p>조장이 수정함</p>
   </body>
 </html>
